--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
-    "cypress": "^10.6.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -142,5 +141,8 @@
       "react-app"
     ]
   },
-  "proxy": "https://api.ladbrokes.com.au"
+  "proxy": "https://api.ladbrokes.com.au",
+  "devDependencies": {
+    "cypress": "^10.6.0"
+  }
 }
