--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "e2e": "npx cypress open"
   },
   "eslintConfig": {
     "extends": [
