chore: clean up repo and write README

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Automation Task",
-  "name": "Entain Cypress Automation Task",
+  "name": "Entain Automation Coding Task",
   "icons": [
     {
       "src": "favicon.ico",
