--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "cypress-real-events": "^1.7.4",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -142,6 +143,7 @@
   },
   "proxy": "https://api.ladbrokes.com.au",
   "devDependencies": {
-    "cypress": "^10.6.0"
+    "cypress": "^10.6.0",
+    "cypress-plugin-tab": "^1.0.5"
   }
 }
